--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "remark-rehype": "^11.1.0",
     "shadcn-ui": "^0.2.3",
     "shiki": "^1.7.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "textarea": "^0.3.0",
     "unified": "^11.0.4",
