--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@types/mdx": "^2.0.13",
     "add": "^2.0.6",
-    "class-variance-authority": "^0.7.0",
+    "calendar": "^0.1.1",
+    "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.0",
     "command": "^0.0.1",
+    "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
     "form": "^0.2.4",
     "gray-matter": "^4.0.3",
@@ -38,8 +41,10 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "popover": "^2.4.1",
     "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-markdown": "^9.0.1",
@@ -47,7 +52,7 @@
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
-    "shadcn-ui": "^0.2.3",
+    "shadcn-ui": "^0.9.4",
     "shiki": "^1.7.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
@@ -70,7 +75,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
