--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@next/bundle-analyzer": "^16.0.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.0",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.52.2",
     "react-markdown": "^9.0.1",
     "shadcn-ui": "^0.9.4",
+    "sharp": "^0.34.4",
     "shiki": "^1.7.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
@@ -72,6 +74,7 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5"
+    "typescript": "^5",
+    "web-vitals": "^5.1.0"
   }
 }
